feat: create doctor entity and persistence in the database closes #4

--- a/Voll-API/src/main/resources/application.properties
+++ b/Voll-API/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Voll-API
+spring.datasource.url = jdbc:postgresql://localhost/vollMed_api
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
