feat: create token generator service closes #54

--- a/Voll-API/src/main/resources/application.properties
+++ b/Voll-API/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url = jdbc:postgresql://localhost/vollMed_api
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+Voll.api.security.token.secret = ${JWT_SECRET:123456}
