docs: add springdoc class configuration closes #61

--- a/Voll-API/src/main/resources/application.properties
+++ b/Voll-API/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 Voll.api.security.token.secret = ${JWT_SECRET:123456}
+
+springdoc.swagger-ui.path=/swagger-ui.html
